--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -8,6 +8,7 @@ $desktop: 1199px;
 $bgColor: #ffffff;
 $accentColor: #E88A01;
 $greenColor: #3E8F35;
+$greyColor: #F2F2F2;
 $textColor: #000000;
 $bgColor_dark: #000000;
 $textColor_dark: #ffffff;
