--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -5,6 +5,8 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-weight: 400;
 }
 
 #root {
@@ -51,6 +53,7 @@ a {
 
 h1 {
   font-size: 48px;
+  font-weight: 700;
 
   @media (max-width: $tablet)  {
     font-size: 40px;
