--- a/src/App.scss
+++ b/src/App.scss
@@ -5,5 +5,12 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  text-align: center;
+}
+
+#dark {
+  background-color: $bgColor_dark;
+}
+
+#light {
+  background-color: $bgColor;
 }
