Made a dark theme

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,10 @@
 
 #dark {
   background-color: $bgColor_dark;
+  color: $textColor_dark
 }
 
 #light {
   background-color: $bgColor;
+  color: $textColor;
 }
