--- a/src/components/FirstScreen/FirstScreen.scss
+++ b/src/components/FirstScreen/FirstScreen.scss
@@ -1,1 +1,65 @@
 @import "../../styles/vars";
+
+
+.firstScreen {
+    padding-top: 252px;
+    
+    &__inner{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    &__title {
+        padding-top: 16px;
+        
+    }
+    &__subTitle {
+        max-width: 462px;
+        padding-top: 16px;
+        font-size: 24px;
+        line-height: 24px;
+    }
+    &__btn {
+        padding-top: 100px;
+    } 
+    
+}
+@media (max-width: $tablet)  {
+    .firstScreen {
+        padding-top: 400px;
+
+    &__title {
+        padding-top: 16px;
+        
+    }
+    &__subTitle {
+        padding-top: 30px;
+        max-width: 345px;
+        font-size: 15px;
+        line-height: 15px;
+
+    }
+    &__btn {
+        padding-top: 60px;
+    }
+}
+}
+@media (max-width: $mobile)  {
+    .firstScreen {
+        padding-top: 120px;
+
+    &__title {
+        padding-top: 16px;
+        
+    }
+    &__subTitle {
+        padding-top: 5px;
+        max-width: 280px;
+        font-size: 8px;
+        line-height: 8px;
+    }
+    &__btn {
+        padding-top: 25px;
+    }
+}
+}
