--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -9,6 +9,7 @@
     text-align: center;
     border: none;
     text-decoration: none;
+    text-transform: uppercase;
 
     &:hover{
         background-color: $greyColor;
