Background for thin-border in dark theme

--- a/src/components/BorderThin/BorderThin.scss
+++ b/src/components/BorderThin/BorderThin.scss
@@ -19,6 +19,11 @@
             filter: blur(2.5px);
             content: '';
         }
+        // background: #F9F9F9;
+}
+
+#dark .borderThin {
+    background: rgba(255, 255, 255, 0.08);
 }
 
 // у рамки должен быть градиент из двух цветов #36CC25 и #29B01A, но я пока не нашла как сделать градиент на рамке
