--- a/src/components/FirstScreen/FirstScreen.scss
+++ b/src/components/FirstScreen/FirstScreen.scss
@@ -2,7 +2,7 @@
 
 
 .firstScreen {
-    padding-top: 252px;
+    margin-top: 270px;
     
     &__inner{
         display: flex;
@@ -10,56 +10,74 @@
     }
     
     &__title {
-        padding-top: 16px;
-        
+        max-width: 873px;
+        font-size: 60px;    
     }
     &__subTitle {
+        margin-top: 15px;
         max-width: 462px;
-        padding-top: 16px;
-        font-size: 24px;
-        line-height: 24px;
+        margin-top: 8px;
+        font-size: 28px;
     }
     &__btn {
-        padding-top: 100px;
+        margin-top: 78px;
+        
+        .btn{
+            max-width: 400px;
+            padding: 30px 71px 27px 69px;
+            font-size: 28px;
+        }
+        a {
+            display: block;
+        }
     } 
     
 }
 @media (max-width: $tablet)  {
     .firstScreen {
-        padding-top: 400px;
+        margin-top: 400px;
 
     &__title {
-        padding-top: 16px;
-        
+        margin-top: 16px;
+        max-width: 655px;
+        font-size: 48px;
     }
     &__subTitle {
-        padding-top: 30px;
+        margin-top: 30px;
         max-width: 345px;
-        font-size: 15px;
-        line-height: 15px;
-
+        font-size: 24px;
     }
     &__btn {
-        padding-top: 60px;
+        margin-top: 60px;
+
+        .btn{
+            font-size: 20px;
+            max-width: 300px; 
+            padding: 12px 29px;
+        }
     }
 }
 }
 @media (max-width: $mobile)  {
     .firstScreen {
-        padding-top: 120px;
+        margin-top: 120px;
 
     &__title {
-        padding-top: 16px;
-        
+        max-width: 280px;
+        font-size: 20px;    
     }
     &__subTitle {
-        padding-top: 5px;
+        margin-top: 5px;
         max-width: 280px;
-        font-size: 8px;
-        line-height: 8px;
+        font-size: 13px;
     }
     &__btn {
-        padding-top: 25px;
+        max-width: 170px;
+        margin-top: 25px; 
+        .btn{
+            font-size: 12px;
+            
+        }
     }
 }
 }
