--- a/src/components/BorderThin/BorderThin.scss
+++ b/src/components/BorderThin/BorderThin.scss
@@ -6,7 +6,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            z-index: 10;
+            z-index: -1;
             top: 0;
             right:0;
             bottom:0;
@@ -19,11 +19,10 @@
             filter: blur(2.5px);
             content: '';
         }
-        // background: #F9F9F9;
+    background: #F9F9F9;
+    z-index: 1;
 }
 
 #dark .borderThin {
     background: rgba(255, 255, 255, 0.08);
 }
-
-// у рамки должен быть градиент из двух цветов #36CC25 и #29B01A, но я пока не нашла как сделать градиент на рамке
