--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -45,6 +45,8 @@ a {
 h1 {
   font-size: 48px;
   font-weight: 700;
+  color: $accentColor;
+  text-align: center;
 
   @media (max-width: $tablet)  {
     font-size: 40px;
