Added components for radio and checkbox

--- a/src/components/FormMessage/FormMessage.scss
+++ b/src/components/FormMessage/FormMessage.scss
@@ -1,1 +1,23 @@
 @import "../../styles/vars";
+
+.formMessage {
+    margin-bottom: 40px;
+}
+
+.formMessage__text {
+    font-size: 20px;
+    background-color: #EBEBEB;
+    padding: 15px 39px 15px 20px;
+    border-radius: 200px;
+}
+
+
+
+// @media (max-width: $tablet)  {
+    
+// }
+
+
+// @media (max-width: $mobile)  {
+
+// }
