--- a/src/components/FormAnswer/FormAnswer.scss
+++ b/src/components/FormAnswer/FormAnswer.scss
@@ -1,1 +1,14 @@
 @import "../../styles/vars";
+
+
+.formAnswer {
+    width: 685px;
+    padding: 60px 39px 30px 80px;
+    border-radius: 30px;
+    font-size: 20px;
+    background-color: #EBEBEB;
+}
+// .formAnswer__inner {
+//    display: flex;
+//    flex-direction: column;
+// }
