--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -1,1 +1,11 @@
 @import "../../styles/vars";
+
+.radio__label {
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.radio__label_big {
+    font-size: 27px;
+    margin-left: 12px;
+}
