--- a/src/components/FirstScreen/FirstScreen.scss
+++ b/src/components/FirstScreen/FirstScreen.scss
@@ -11,7 +11,8 @@
     
     &__title {
         max-width: 873px;
-        font-size: 60px;    
+        font-size: 60px;
+        text-align: left;    
     }
     &__subTitle {
         margin-top: 15px;
