--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -1,5 +1,9 @@
 @import "../../styles/vars";
 
-.checkbox_label {
+.checkbox:not(:last-child) {
+   margin-bottom: 18px;
+}
+
+.checkbox__label {
     margin-left: 10px;
 }
