--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -33,3 +33,47 @@
         z-index: 1;
     }       
 }
+@mixin before_circle-pressed {
+    &:before {
+        display: block;
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: -13px;
+        left: -23px;
+        width: 66px;
+        height: 66px;
+        border-radius: 100%;
+        background-color: #5FAE36;
+        border: 4px solid #5FAE36;
+    }
+}
+
+@mixin before_circle {
+    &::before {
+        display: block;
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: -13px;
+        left: -23px;
+        width: 66px;
+        height: 66px;
+        border-radius: 100%;
+        border: 4px solid #5FAE36;
+    }
+}
+@mixin divider {
+    &::after{
+        box-sizing: border-box;
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 17px;
+        left: 43px;
+        width: 84px;
+        border: 3px solid #5FAE36;
+    }
+}
