--- a/src/components/PersonalDataInputs/PersonalDataInputs.scss
+++ b/src/components/PersonalDataInputs/PersonalDataInputs.scss
@@ -1,21 +1,20 @@
 @import "../../styles/vars";
 
 .personalData {
-  width: 580px;
+  width: 579px;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 .personalData__firstAndMiddle {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1.5fr 2fr;
     gap: 13px;
 }
 
 .personalData__input {
     width: 100%;
-    // min-width: 244px;
     height: 50px;
     padding: 12px 30px;
     font-size: 20px;
@@ -26,5 +25,44 @@
     &:focus {
         border-color: $accentColor;
         outline: none;
+    }
+
+    &:focus::placeholder  {
+        color: $accentColor;
+    }
+}
+
+@media (max-width: $tablet)  {
+    .personalData {
+        width: 540px;
+      }
+
+      .personalData__firstAndMiddle {
+        grid-template-columns: 1.3fr 2fr;
+        gap: 20px;
+    }
+}
+
+@media (max-width: 730px)  {
+    .personalData {
+        width: 100%;
+      }
+}
+
+
+@media (max-width: $mobile)  {
+    .personalData {
+        width: 100%;
+      }
+
+    .personalData__firstAndMiddle {
+        gap: 10px;
+    }
+      .personalData__input {
+        height: 30px;
+        padding: 11px 15px;
+        font-size: 10px;
+        border: 1px solid $textColor;
+        border-radius: 5px;
     }
 }
