--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -74,6 +74,7 @@
         top: 17px;
         left: 43px;
         width: 84px;
+        background-color: #5FAE36;
         border: 3px solid #5FAE36;
     }
 }
