--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -33,6 +33,7 @@
         position: relative; 
         @include before_square;
         @include after_square;
+        
     } 
     &__btn{
         margin: 0 auto;
@@ -132,6 +133,7 @@
         margin-top: 15px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         row-gap: 10px; 
     }
     
