--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -1,1 +1,161 @@
 @import "../../styles/vars";
+
+.whyRecyclex{
+    margin-top: 280px;
+
+    &__inner {
+        margin-top: 85px;
+        padding-bottom: 64px;
+        padding-left: 18px;
+        padding-right: 80px;
+        display: flex;
+        column-gap: 5%;
+    }
+    &__items {
+        width: 50%;
+        margin-top: 50px;
+        margin-left: 15px;    
+    }
+    &__item {
+        min-height: 130px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .item_gradient {
+        position: relative; 
+        &::before {
+            box-sizing:border-box;
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: linear-gradient(90deg, rgba(232, 139, 0, 0.35) 0%, rgba(232, 139, 0, 0) 69.53%);
+            filter: blur(7px);  
+            z-index: -1;
+        }
+        &::after{
+            box-sizing:border-box;
+            box-sizing: border-box;
+            content: url("../../assets/imgs/arrows.svg");
+            position: absolute;
+            z-index: -1;
+            left: 100%;
+        }
+    }
+    
+    &__img{
+        margin-top: 279px;
+        width: 40%;
+        height: 38%;
+        img {
+            width: 100%;
+        }
+    }
+    
+
+    &__subTitle {
+        padding-top: 15px;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 30px;   
+    }
+    &__text {
+        margin-top: 5px;
+        font-size: 14px;
+        line-height: 18px;   
+    }
+    &__divider {
+        border-bottom: 1px solid #000000;
+    }
+    
+    
+    &__img {
+        img {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            }   
+        }
+}
+@media (max-width: $tablet)  {
+
+    .whyRecyclex {
+
+        margin-top: 230px;
+
+        &__inner {
+            margin-top: 80px;
+            padding-bottom: 39px;
+            padding-left: 40px;
+            padding-right: 40px;
+        }
+        &__item {
+            min-height: 67px;
+        }
+        .item_gradient {
+            &::after {
+                display: none;
+            }  
+        }
+        &__subTitle {
+            font-size: 15px;
+            line-height: 19px;
+        }
+        &__text {
+            font-size: 10px;
+            line-height: 13px;
+        }
+
+        &__img{
+            margin-top: 179px;
+            width: 36%;
+            height: 29%;   
+        }
+    }
+
+}
+@media (max-width: $mobile) {
+
+    .whyRecyclex{
+
+        margin-top: 80px;
+        .borderThin{
+            &:before{
+                display: none;
+            } 
+        }
+        
+        &__inner{
+            margin-top: 30px;
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0px;
+            flex-direction: column;
+            align-items: center;
+            row-gap: 20px;
+        }
+        &__item {
+            min-height: 50px;
+        }
+        &__items{
+            width: 100%; 
+            margin-top: 0;
+            margin-left: 0;  
+        }
+        &__subTitle {
+            font-size: 12px;
+            line-height: 15px;
+
+        }
+        &__text {
+            font-size: 8px;
+            line-height: 10px;
+        }  
+        &__img {
+            margin-top: 0;
+            width: 91%;
+        }
+    }
+
+}
