--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 45px 20px 34px 20px;
+    padding: 45px 53px 35px 53px;
 }
 
 @media (max-width: $tablet)  {   
@@ -49,7 +49,7 @@
     }
 
     .form__personalData {
-        padding-top: 42px;
+        padding: 45px 20px 35px 20px;
         }  
 }
 
@@ -73,7 +73,7 @@
 
 
 .form__personalData {
-    padding: 20px;
+    padding: 20px 22px;
     }
     
 }
