--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,16 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-image: url(./assets/imgs/background_desktop.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+    @media (max-width: $tablet)  {
+      background-image: url(./assets/imgs/background_table.png); 
+}
+
+    @media (max-width: $mobile)  {
+      background-image: url(./assets/imgs/background_mobile.png);
+}
 }
 
 #dark {
