--- a/src/components/BorderThin/BorderThin.scss
+++ b/src/components/BorderThin/BorderThin.scss
@@ -21,8 +21,10 @@
         }
     background: #F9F9F9;
     z-index: 1;
+    border-radius: 30px;
 }
 
 #dark .borderThin {
     background: rgba(255, 255, 255, 0.08);
+    border-radius: 30px;
 }
