--- a/src/App.scss
+++ b/src/App.scss
@@ -4,16 +4,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-image: url(./assets/imgs/background_desktop.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
-    @media (max-width: $tablet)  {
-      background-image: url(./assets/imgs/background_table.png); 
-}
-
-    @media (max-width: $mobile)  {
-      background-image: url(./assets/imgs/background_mobile.png);
-}
 }
 
 #dark {
@@ -24,4 +14,18 @@
 #light {
   background-color: $bgColor;
   color: $textColor;
+}
+
+.home__page {
+  background-image: url(./assets/imgs/background_desktop.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: $bgColor;
+
+    @media (max-width: $tablet)  {
+      background-image: url(./assets/imgs/background_table.png); 
+}
+    @media (max-width: $mobile)  {
+      background-image: url(./assets/imgs/background_mobile.png);
+}
 }
