--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -77,3 +77,25 @@
     }
     
 }
+
+// кастомные стили анимации
+
+
+.transition-answer-enter {
+    opacity: 0;
+}
+
+.transition-answer-enter-active {
+    opacity: 1;
+    transition: opacity 200ms;
+}
+
+.transition-question-enter {
+    opacity: 0;
+}
+
+.transition-question-enter-active {
+    opacity: 1;
+    transition: opacity 200ms;
+    transition-delay: 300ms;
+}
