--- a/src/components/SwitchTheme/SwitchTheme.scss
+++ b/src/components/SwitchTheme/SwitchTheme.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
 }
 
 .switch__label {
@@ -13,6 +12,7 @@
 .react-switch {
     display: block !important;
     margin-top: 3px;
+    margin-bottom: 5px;
 }
 
 .react-switch-bg {
